CMAKE_MINIMUM_REQUIRED(VERSION 3.3.0)

SET(DRAW_LIBRARY draw)

SET(PRIVATE_INCLUDE_DIRECTORIES_DRAW
  ${SOURCE_ROOT}
  ${COMMON_INCLUDE_DIR}
  ${SDL2_INCLUDE_DIRS}
)

SET(BUILD_DRAW_SOURCES
  ${SOURCE_ROOT}/client/player/draw/draw.h
  ${SOURCE_ROOT}/client/player/draw/draw.cpp
  ${SOURCE_ROOT}/client/player/draw/surface_saver.h
  ${SOURCE_ROOT}/client/player/draw/surface_saver.cpp
  ${SOURCE_ROOT}/client/player/draw/texture_saver.h
  ${SOURCE_ROOT}/client/player/draw/texture_saver.cpp
)

ADD_LIBRARY(${DRAW_LIBRARY} OBJECT ${BUILD_DRAW_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${DRAW_LIBRARY} PRIVATE ${PRIVATE_INCLUDE_DIRECTORIES_DRAW})

IF(DEVELOPER_CHECK_STYLE)
  SET(CHECK_SOURCES_CLIENT_PLAYER_DRAW
    ${BUILD_DRAW_SOURCES}
  )
  REGISTER_CHECK_STYLE_TARGET(check_style_${DRAW_LIBRARY} "${CHECK_SOURCES_CLIENT_PLAYER_DRAW}")
  REGISTER_CHECK_INCLUDES_TARGET(${DRAW_LIBRARY})
ENDIF(DEVELOPER_CHECK_STYLE)
